--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -60,6 +60,7 @@
   <ItemGroup>
     <Compile Include="src\Engine\ILoadable.cs" />
     <Compile Include="src\Engine\PauseHandler.cs" />
+    <Compile Include="src\Game\Projectile.cs" />
     <Compile Include="src\Game\Skill.cs" />
     <Compile Include="src\Engine\SkillHandler.cs" />
     <Compile Include="src\Game\SkillProp.cs" />
@@ -67,7 +68,7 @@
     <Compile Include="src\Game\Spell.cs" />
     <Compile Include="src\Game\TerrainGenerator.cs" />
     <Compile Include="src\Game\Entity.cs" />
-    <Compile Include="src\Game\Projectile.cs" />
+    <Compile Include="src\Game\ProjectileSingle.cs" />
     <Compile Include="src\Engine\AnimatedTexture.cs" />
     <Compile Include="src\Engine\IHandler.cs" />
     <Compile Include="src\Engine\GameHandler.cs" />
