--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -111,6 +111,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="ProjectBueno-Release\Content\EnemyTest.json" />
+    <None Include="ProjectBueno-Release\Content\pattern.xnb" />
     <None Include="ProjectBueno-Release\Content\Player.json" />
     <None Include="ProjectBueno-Release\Content\Skills.json" />
     <None Include="ProjectBueno-Release\Content\SkillTree.json" />
