--- a/App.config
+++ b/App.config
@@ -1,4 +1,4 @@
-﻿<?xml version="1.0" encoding="utf-8" ?>
+<?xml version="1.0" encoding="utf-8"?>
 <!-- Specifies dependency location. DO NOT CHANGE! -->
 <configuration>
 	<runtime>
@@ -6,4 +6,4 @@
 			<probing privatePath="Dependencies"/>
 		</assemblyBinding>
 	</runtime>
-</configuration>
+<startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
