--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -100,6 +100,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="ProjectBueno-Release\Content\flyingProj.png" />
+    <Content Include="ProjectBueno-Release\Content\Font.png" />
     <Content Include="ProjectBueno-Release\Content\pauseScreen.png" />
     <Content Include="ProjectBueno-Release\Content\plStand.png" />
     <Content Include="ProjectBueno-Release\Content\plWalk.png" />
