Made stream move with player

--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -65,6 +65,7 @@
     <Compile Include="src\Engine\Handlers\PauseHandler.cs" />
     <Compile Include="src\Game\Enemy.cs" />
     <Compile Include="src\Game\Projectile.cs" />
+    <Compile Include="src\Game\ProjectileBurst.cs" />
     <Compile Include="src\Game\ProjectileGroup.cs" />
     <Compile Include="src\Game\Skill.cs" />
     <Compile Include="src\Engine\Handlers\SkillHandler.cs" />
