--- a/ProjectBueno-Release/Content/Config.json
+++ b/ProjectBueno-Release/Content/Config.json
@@ -6,5 +6,10 @@
 	
 	"namePos" : {"x" : 69, "y" : 41},
 	"descPos" : {"x" : 69, "y" : 51},
-	"costPos" : {"x" : 24, "y" : 92}
+	"costPos" : {"x" : 24, "y" : 92},
+	
+	"arrowSize" : {"w" : 6, "h" : 5},
+	"upArrowBounds" : {"x" : 100, "y" : 12},
+	"downArrowBounds" : {"x" : 100, "y" : 29},
+	"numPos" : {"x" : 92, "y" : 20}
 }
