--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -115,6 +115,7 @@
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+    <None Include="ProjectBueno-Release\Content\Config.json" />
     <None Include="ProjectBueno-Release\Content\EnemyTest.json" />
     <None Include="ProjectBueno-Release\Content\Player.json" />
     <None Include="ProjectBueno-Release\Content\Skills.json" />
