--- a/.gitignore
+++ b/.gitignore
@@ -197,8 +197,7 @@ FakesAssemblies/
 # Visual Studio 6 workspace options file
 *.opt
 
-# Visual Studio Solution
-*.sln
+# Project Bueno stuff
 ProjectBueno-Release/*
 !ProjectBueno-Release/Content/
 ProjectBueno-Release/Content/bin
