--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -123,6 +123,9 @@
     <Reference Include="System">
       <Private>False</Private>
     </Reference>
+    <Reference Include="System.Windows.Forms">
+      <Private>False</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
     <Content Include="ProjectBueno-Release\Content\flyingProj.png" />
