Added quit button

--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -91,6 +91,7 @@
   <ItemGroup>
     <Compile Include="src\Engine\Handlers\HelpMenuHandler.cs" />
     <Compile Include="src\Engine\MoveButton.cs" />
+    <Compile Include="src\Engine\QuitButton.cs" />
     <Compile Include="src\Engine\TextMoveButton.cs" />
     <Compile Include="src\Engine\Handlers\PauseHandler.cs" />
     <Compile Include="src\Engine\Handlers\MenuHandler.cs" />
