--- a/ProjectBueno-Release/Content/Config.json
+++ b/ProjectBueno-Release/Content/Config.json
@@ -6,19 +6,24 @@
 	
 	"namePos" : {"x" : 69, "y" : 41},
 	"descPos" : {"x" : 69, "y" : 51},
-	"costPos" : {"x" : 24, "y" : 92},
+	"costPos" : {"x" : 69, "y" : 89},
+	"kpPos" : {"x" : 23, "y" : 92},
 	
 	"arrowSize" : {"w" : 6, "h" : 5},
 	"upArrowBounds" : {"x" : 100, "y" : 12},
 	"downArrowBounds" : {"x" : 100, "y" : 29},
 	"numPos" : {"x" : 92, "y" : 20},
 
+	"hudHealthBar" : {"x" : 8, "y" : 7, "w" : 65, "h" : 4},
+	"hudCooldownBar" : {"x" : 8, "y" : 18, "w" : 29, "h" : 3},
+	"hudKp" : {"x" : 47, "y" : 17, "w" : 25},
+
 	"startBtn" : {"x" : 16, "y" : 72, "w" : 19, "h" : 5, "text" : "start"},
 	"helpBtn" : {"x" : 16, "y" : 78, "w" : 15, "h" : 5, "text" : "help"},
 	"quitBtn" : {"x" : 16, "y" : 84, "w" : 16, "h" : 5, "text" : "quit"},
 	"resumeBtn" : {"x" : 56, "y" : 57, "w" : 19, "h" : 5, "text" : "resume"},
-	"helpBtn2" : {"x" : 62, "y" : 64, "w" : 15, "h" : 5, "text" : "help"},
-	"backBtnStart" : {"x" : 14, "y" : 87, "w" : 9, "h" : 7, "texture" : "backBtn", "background" : "startMenuHelp"},
-	"backBtnPause" : {"x" : 14, "y" : 86, "w" : 9, "h" : 7, "texture" : "backBtn", "background" : "pauseScreenHelp"}
+	"helpBtn2" : {"x" : 60, "y" : 64, "w" : 15, "h" : 5, "text" : "help"},
+	"backBtnStart" : {"x" : 13, "y" : 86, "w" : 9, "h" : 7, "texture" : "backBtn", "background" : "startMenuHelp"},
+	"backBtnPause" : {"x" : 13, "y" : 86, "w" : 9, "h" : 7, "texture" : "backBtn", "background" : "pauseScreenHelp"}
 
 }
