--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -89,6 +89,7 @@
     </Reference>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <Compile Include="src\Engine\Chunk.cs" />
     <Compile Include="src\Engine\Handlers\HelpMenuHandler.cs" />
     <Compile Include="src\Engine\MoveButton.cs" />
     <Compile Include="src\Engine\QuitButton.cs" />
@@ -142,6 +143,7 @@
     <Content Include="ProjectBueno-Release\Content\cooldownBar.png" />
     <Content Include="ProjectBueno-Release\Content\flyingProj.png" />
     <Content Include="ProjectBueno-Release\Content\Font.png" />
+    <Content Include="ProjectBueno-Release\Content\forestTree.png" />
     <Content Include="ProjectBueno-Release\Content\healthBar.png" />
     <Content Include="ProjectBueno-Release\Content\hudBackground.png" />
     <Content Include="ProjectBueno-Release\Content\OutlineShader.fx" />
