Added more trees and enemy health bars

--- a/ProjectBueno-Release/Content/Config.json
+++ b/ProjectBueno-Release/Content/Config.json
@@ -4,10 +4,10 @@
 	"modTopBounds" : {"x" : 127, "y" : 12},
 	"modBottomBounds" : {"x" : 127, "y" : 24},
 
-	"treeForest" : {"x" :  8, "y" : 32},
-	"treeDesert" : {"x" : 1, "y" : 2},
-	"treeCold" : {"x" : 1, "y" : 2},
+	"tree" : {"x" : 8, "y" : 32, "w" : 24, "h" : 42},
 	
+	"healthBar" : {"w" : 5, "h" : 1, "d" : 2},
+
 	"namePos" : {"x" : 69, "y" : 41},
 	"descPos" : {"x" : 69, "y" : 51},
 	"costPos" : {"x" : 69, "y" : 89},
