--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -121,6 +121,7 @@
     <Compile Include="src\Utility\Noise.cs" />
     <Compile Include="src\Utility\AngleVector.cs" />
     <Compile Include="src\Utility\RectangleHelper.cs" />
+    <Compile Include="src\Utility\VectorHelper.cs" />
   </ItemGroup>
   <ItemGroup>
     <Reference Include="MonoGame.Framework, Version=3.5.0.1678, Culture=neutral, processorArchitecture=MSIL">
@@ -143,7 +144,6 @@
     <Content Include="ProjectBueno-Release\Content\cooldownBar.png" />
     <Content Include="ProjectBueno-Release\Content\flyingProj.png" />
     <Content Include="ProjectBueno-Release\Content\Font.png" />
-    <Content Include="ProjectBueno-Release\Content\forestTree.png" />
     <Content Include="ProjectBueno-Release\Content\healthBar.png" />
     <Content Include="ProjectBueno-Release\Content\hudBackground.png" />
     <Content Include="ProjectBueno-Release\Content\OutlineShader.fx" />
