--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -92,6 +92,7 @@
     <Compile Include="src\Engine\Chunk.cs" />
     <Compile Include="src\Engine\EnemyManager.cs" />
     <Compile Include="src\Engine\Handlers\HelpMenuHandler.cs" />
+    <Compile Include="src\Engine\TextScreen.cs" />
     <Compile Include="src\Engine\MoveButton.cs" />
     <Compile Include="src\Engine\QuitButton.cs" />
     <Compile Include="src\Engine\TextMoveButton.cs" />
