Added biome dependant speed

--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -110,7 +110,7 @@
     <Compile Include="src\Game\SkillProp.cs" />
     <Compile Include="src\Game\SkillShapes.cs" />
     <Compile Include="src\Game\Spell.cs" />
-    <Compile Include="src\Engine\TerrainGenerator.cs" />
+    <Compile Include="src\Engine\Terrain.cs" />
     <Compile Include="src\Game\Entity.cs" />
     <Compile Include="src\Engine\AnimatedTexture.cs" />
     <Compile Include="src\Engine\Handlers\IHandler.cs" />
