Added biome specific music

--- a/ProjectBueno-Engine.csproj
+++ b/ProjectBueno-Engine.csproj
@@ -148,7 +148,6 @@
     <Content Include="ProjectBueno-Release\Content\healthBar.png" />
     <Content Include="ProjectBueno-Release\Content\hudBackground.png" />
     <Content Include="ProjectBueno-Release\Content\OutlineShader.fx" />
-    <Content Include="ProjectBueno-Release\Content\patternfin.wav" />
     <Content Include="ProjectBueno-Release\Content\pauseMusic.wav" />
     <Content Include="ProjectBueno-Release\Content\pauseScreen.png" />
     <Content Include="ProjectBueno-Release\Content\pauseScreenHelp.png" />
@@ -161,6 +160,7 @@
     <Content Include="Icon.ico" />
     <Content Include="ProjectBueno-Release\Content\startMenu.png" />
     <Content Include="ProjectBueno-Release\Content\startMenuHelp.png" />
+    <Content Include="ProjectBueno-Release\Content\startMusic.wav" />
     <Content Include="ProjectBueno-Release\Content\tiktok.wav" />
   </ItemGroup>
   <ItemGroup>
